--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body class="bg-gray-900">
 		<!-- loader -->
-		<div id="loader" class="fixed top-0 left-0 right-0 bottom-0 bg-white">
+		<div id="loader" class="fixed top-0 left-0 right-0 bottom-0 bg-white index">
 			<div
 				class="lds-dual-ring absolute top-2/4 left-2/4 -translate-x-2/4 -translate-y-2/4"
 			></div>
@@ -180,7 +180,7 @@
 
 		<!--  -->
 		<!-- header -->
-		<header class="bg-gray-800 mb-10 sticky top-0 left-0 index">
+		<header class="bg-gray-800 sticky top-0 left-0 z-50">
 			<nav class="container h-[80px] flex items-center justify-between">
 				<!-- logo -->
 				<div class="flex items-center gap-x-2">
@@ -193,7 +193,7 @@
 						<h1
 							class="text-sm sm:text-lg font-semibold text-gray-700 capitalize dark:text-white"
 						>
-							Abdulaziz Abdugafurov
+							Abdulaziz Abdugofurov
 						</h1>
 
 						<p class="text-sm text-gray-500 dark:text-gray-400">
@@ -214,7 +214,7 @@
 		</header>
 		<!--  -->
 		<main>
-			<section>
+			<section class="my-14">
 				<div
 					class="wrapper container grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3"
 				></div>
