--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<!-- addConfirmModal -->
 		<div
 			id="confirmModal"
-			class="flex w-full max-w-sm overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 duration-300 fixed bottom-6 -right-full index"
+			class="flex w-full max-w-xs overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 duration-300 fixed bottom-6 -right-full index"
 		>
 			<div class="flex items-center justify-center w-12 bg-emerald-500">
 				<svg
@@ -50,7 +50,7 @@
 		<!-- deleteConfirmModal -->
 		<div
 			id="deleteModal"
-			class="flex w-full max-w-sm overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 duration-300 fixed bottom-6 -right-full index"
+			class="flex w-full max-w-xs overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 duration-300 fixed bottom-6 -right-full index"
 		>
 			<div class="flex items-center justify-center w-12 bg-red-500">
 				<svg
@@ -79,7 +79,7 @@
 		<!-- modal -->
 		<div
 			id="modal"
-			class="w-full h-[100vh] bg-[#00000088] fixed top-0 left-0 z-50 show"
+			class="w-full h-[100vh] bg-[#00000088] fixed top-0 left-0 index show"
 		>
 			<section
 				class="index max-w-2xl w-[90%] sm:w-4/5 p-6 mx-auto bg-white rounded-md shadow-md dark:bg-gray-800 fixed top-2/4 left-2/4 -translate-x-2/4 -translate-y-2/4"
